# TankBattleSimulation

./: CMakeLists.txt  README.txt  config.ini  features.txt
Algorithm/: CMakeLists.txt  MyPlayer_211645361_000000000.cpp  MyPlayer_211645361_000000000.h  MyTankAlgorithm_211645361_000000000.cpp  MyTankAlgorithm_211645361_000000000.h
GameManager/: CMakeLists.txt  MyGameManager_211645361_000000000.cpp  MyGameManager_211645361_000000000.h
Simulator/: AlgorithmRegistrar.cpp  AlgorithmRegistrar.h  BaseSimulator.cpp  BaseSimulator.h  CMakeLists.txt  CommandLineParser.h  ComparativeSimulator.cpp  ComparativeSimulator.h  CompetitiveSimulator.cpp  CompetitiveSimulator.h  GameManagerRegistrar.cpp  GameManagerRegistrar.h  GameManagerRegistration.cpp  PlayerRegistration.cpp  TankAlgorithmRegistration.cpp  main.cpp
UserCommon/: Block.cpp  Block.h  Board.cpp  Board.h  Config.h  Entity.h  Logger.h  Mine.cpp  Mine.h  MyBattleInfo.cpp  MyBattleInfo.h  MySatelliteView.cpp  MySatelliteView.h  Node.cpp  Node.h  Shell.cpp  Shell.h  Tank.cpp  Tank.h  Utils.h  Wall.cpp  Wall.h
common/: AbstractGameManager.h  ActionRequest.h  BattleInfo.h  GameManagerRegistration.h  GameResult.h  Player.h  PlayerRegistration.h  SatelliteView.h  TankAlgorithm.h  TankAlgorithmRegistration.h
